# glimmer-grabber

./: .coverage  .env  .env.example  .gitignore  README.md  card_data_fetcher.py  card_segmenter.py  cli.py  config.json  config_manager.py  conftest.py  contrast_checker.py  coverage.xml  create_test_image.py  docker-compose.yml  grayscale_converter.py  illumination_normalizer.py  image_preprocessor.py  image_reader.py  inference.py  main.py  noise_reducer.py  pyproject.toml  run_tests.sh  setup.sh  test.db  test_create_test_image.py
api_gateway/: Dockerfile  googleDrive.js  jamboard.js  package-lock.json  package.json  server.js
auth_service/: Dockerfile  alembic.ini  app.py  config.py  requirements.txt  security.py  test_auth.py  utils.py
frontend/: Dockerfile
job_service/: Dockerfile  alembic.ini  app.py  config.py  requirements.txt  schemas.py  security.py  test_config.py  test_config.py.bak  test_jobs.py
my-react-app/: jest.config.cjs  jest.config.js  package-lock.json  package.json
processing_service/: Dockerfile  app.py  celery_app.py  database.py  main.py  requirements.txt  tasks.py  test_core_image_processing.py  test_image_processing.py  test_image_processing_logic.py  worker.py
shared/: README.md  config.py  pyproject.toml  setup.py
shared/shared/database/: database.py
shared/shared/models/: models.py
shared/shared/schemas/: schemas.py
src/: __init__.py
tests/: test_card_data_fetcher.py  test_card_segmenter.py  test_cli.py  test_cli_args_parser.py  test_config_manager.py  test_contrast_checker.py  test_grayscale_converter.py  test_main.py  (+6 more)
(+50 files in other folders)
