[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared library for the monorepo"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.6"
SQLAlchemy = "^2.0.19"
alembic = "^1.11.1"
pika = "^1.3.2"
python-consul = "^1.1.0"
redis = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
